--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "freedesktop"]
 	path = freedesktop
 	url = https://github.com/copycat-killer/awesome-freedesktop.git
+[submodule "lain"]
+	path = lain
+	url = https://github.com/copycat-killer/lain.git
