--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lain"]
 	path = lain
 	url = https://github.com/copycat-killer/lain.git
+[submodule "revelation"]
+	path = revelation
+	url = https://github.com/guotsuan/awesome-revelation.git
