--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "revelation"]
 	path = revelation
 	url = https://github.com/guotsuan/awesome-revelation.git
+[submodule "away"]
+	path = away
+	url = https://github.com/shmilee/awesome-away.git
