--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "freedesktop"]
 	path = freedesktop
-	url = https://github.com/copycat-killer/awesome-freedesktop.git
+    url = https://github.com/lcpz/awesome-freedesktop.git
 [submodule "lain"]
 	path = lain
-	url = https://github.com/copycat-killer/lain.git
+    url = https://github.com/lcpz/lain.git
 [submodule "revelation"]
 	path = revelation
 	url = https://github.com/guotsuan/awesome-revelation.git
