--- a/picom.conf
+++ b/picom.conf
@@ -46,6 +46,7 @@ shadow-offset-y = -3;
 shadow-exclude = [
   "name = 'Notification'",
   "class_g = 'Conky'",
+  "class_g = 'conky-semi'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "_GTK_FRAME_EXTENTS@:c"
