rm albert border

--- a/picom.conf
+++ b/picom.conf
@@ -47,6 +47,7 @@ shadow-exclude = [
   "name = 'Notification'",
   "class_g = 'Conky'",
   "class_g = 'conky-semi'",
+  "class_g = 'albert'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "_GTK_FRAME_EXTENTS@:c"
